--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prework Study Guide</title>
+    <link rel="stylesheet" href="./assets/style.css">
+    <title>Let's play rock paper scissors</title>
   </head>
   <body>
     <header id="top">
-      <h1>Prework Study Guide</h1>
-      <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h1>Let's Play Rock Paper Scissors</h1>
+      <img src="./assets/rockpng.png" alt="picture of a rock.">
+      <img scr="./assets/paper.png"  alt="picture of a paper">
+      <img scr="./assets/scissors.png" alt="picture of scissors"/>
     </header>
     <main>
       <!-- Student code goes here -->
