--- a/index.html
+++ b/index.html
@@ -5,17 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/style.css">
-    <title>Let's play rock paper scissors</title>
+    <title>Let's play Rock Paper Scissors</title>
   </head>
   <body>
-    <header id="top">
-      <h1>Let's Play Rock Paper Scissors</h1>
-      <img src="./assets/rockpng.png" alt="picture of a rock.">
-      <img scr="./assets/paper.png"  alt="picture of a paper">
-      <img scr="./assets/scissors.png" alt="picture of scissors"/>
-    </header>
-    <main>
-      <!-- Student code goes here -->
+  <h1>ROCK</h1>
+<img
+src="./assets/rockpng.png"
+/>
+  <h1>PAPER</h1>
+<img
+src="./assets/paper.png"
+/>
+  <h1>SCISSORS</h1>
+<ing
+src="./assets/Scissor.png"
+/>
+
+
+
+
     </main>
 
     <footer>
