added changes to html tilte

--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/style.css">
-    <title>Let's play Rock Paper Scissors</title>
+    <title>Let's play..Rock, Paper, or Scissors?</title>
   </head>
   <body>
-  <h1>ROCK</h1>
+  <h1>Let's Play.. Rock, Paper, or Scissors?</h1>
+
+  <h2>ROCK</h2>
 <img
-src="./assets/rockpng.png"
+src="./assets/rockpng.png" alt="image of a rock"
 />
-  <h1>PAPER</h1>
+  <h2>PAPER</h2>
 <img
-src="./assets/paper.png"
+src="./assets/paper.png" alt="image of a paper" 
 />
-  <h1>SCISSORS</h1>
-<ing
-src="./assets/Scissor.png"
+  <h2>SCISSORS</h2>
+<img
+src="./assets/Scissor.png" alt="image of scissors"
 />
 
 
@@ -27,7 +29,7 @@ src="./assets/Scissor.png"
     </main>
 
     <footer>
-      <p>I can code!</p>
+      <p>Let's play again!</p>
     </footer>
   </body>
 </html>
