added link for the console in the header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/style.css">
     <title>Let's play..Rock, Paper, or Scissors?</title>
+    <h2>✨ Open the Console to See What's Happening ✨</h2>
   </head>
   <body>
   <h1>Let's Play.. Rock, Paper, or Scissors?</h1>
@@ -31,5 +32,6 @@ src="./assets/Scissor.png" alt="image of scissors"
     <footer>
       <p>Let's play again!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
