--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <h2>✨ Open the Console to See What's Happening ✨</h2>
   </head>
   <body>
+    <section class="card" id="Let's Play.. Rock, Paper or Scissors?"></section>
+  </section>
+
   <h1>Let's Play.. Rock, Paper, or Scissors?</h1>
 
   <h2>ROCK</h2>
