made changes to readme, and js

--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/style.css">
-    <title>Let's play..Rock, Paper, or Scissors?</title>
-    <h2>✨ Open the Console to See What's Happening ✨</h2>
+    <title>Let's play...</title>
   </head>
   <body>
     <section class="card" id="Let's Play.. Rock, Paper or Scissors?"></section>
   </section>
 
-  <h1>Let's Play.. Rock, Paper, or Scissors?</h1>
+  <h1>Let's Play...</h1>
 
   <h2>ROCK</h2>
 <img
@@ -31,9 +30,9 @@ src="./assets/Scissor.png" alt="image of scissors"
 
 
     </main>
-
+    <h2>✨ Open the Console to See What's Happening ✨</h2>
     <footer>
-      <p>Let's play again!</p>
+      <p>Make your choice then open Console to reaval if you chose wisely</p>
     </footer>
     <script src="./assets/script.js"></script>
   </body>
